// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliantSystems expect to render with unsupported hosts 1`] = `
<Fragment>
  <ReportChart
    chartClass="report-table-chart-container"
    hasLegend={false}
    profile={
      {
        "compliantHostCount": 9,
        "testResultHostCount": 10,
        "unsupportedHostCount": 42,
      }
    }
  />
</Fragment>
`;

exports[`CompliantSystems expect to render without error 1`] = `
<Fragment>
  <ReportChart
    chartClass="report-table-chart-container"
    hasLegend={false}
    profile={
      {
        "compliantHostCount": 9,
        "testResultHostCount": 10,
      }
    }
  />
</Fragment>
`;

exports[`Name expect to render without error 1`] = `
<TextContent>
  <LinkWithPermission
    style={
      {
        "marginRight": ".5rem",
      }
    }
    to="/reports/ID"
  >
    POLICY_NAME
  </LinkWithPermission>
  <PolicyPopover
    position="right"
    profile={
      {
        "id": "ID",
        "name": "NAME",
        "policy": {
          "id": "POLICY_ID",
          "name": "POLICY_NAME",
        },
        "policyType": "POLICY_TYPE",
      }
    }
  />
  <GreySmallText>
    POLICY_TYPE
  </GreySmallText>
</TextContent>
`;

exports[`OperatingSystem expect to render with SSG version 1`] = `
<Fragment>
  RHEL 
  7
  <Text>
    <GreySmallText>
      SSG: 1.2.3
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render with unsupported warning 1`] = `
<Fragment>
  RHEL 
  7
  <Text>
    <GreySmallText>
      <UnsupportedSSGVersion>
        SSG: 1.2.3
      </UnsupportedSSGVersion>
    </GreySmallText>
  </Text>
</Fragment>
`;

exports[`OperatingSystem expect to render without error 1`] = `
<Fragment>
  RHEL 
  7
</Fragment>
`;

exports[`PDFExportDownload expect to render without error 1`] = `
<BackgroundLink
  Component={[Function]}
  componentProps={
    {
      "className": "pf-u-mr-md",
      "ouiaId": "ReportsDownloadReportPDFLink",
      "variant": "plain",
    }
  }
  to="/reports/ID1/pdf"
>
  <DownloadIcon
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
</BackgroundLink>
`;
